# contrastner

./: .gitignore  LICENSE  README.md  environment-local.yml  environment.yml  modeling.py  pyproject.toml  train.py
analysis/: analysis.ipynb  base_model_analysis.ipynb  baseline_compare.ipynb  bert_cased_uncased.ipynb  best_worst_heatmap.ipynb  conll_example_sentence.ipynb  cross_corpus_analysis.ipynb  dataset_analysis.ipynb  exploring_sentences.py  k_shot_analysis.ipynb  neg_o_prob.ipynb  per_class_stats.ipynb  plotting.py  tml_cel_loss.ipynb  token_imbalance.py  wandb_plots.ipynb  wandb_query_test.ipynb  wandb_sweep_export.ipynb
analysis/data/: wandb_base_model_sweep.csv  wandb_conll_baseline_sweep.csv  wandb_idk.csv  wandb_mit_baseline_sweep.csv  wandb_wnut_baseline_sweep.csv  wandb_wnut_bs64_baseline_sweep.csv
contrastner/: dataset.py  modeling.py  modeling_contrastner.py  testing.py  train_baseline.py  train_contrastive.py  train_finetuning.py  train_full.py  train_sweep.py  trainers.py  utils.py  wandb_logger.py
contrastner/analysis/: classification_plot.py  sentence_logger.py
flair-intro/: flair-intro.py  getting_conll.py
huggingface-intro/: fsner.py  hf_dataset_test.py  hf_token_classification.py
setfit/: dataset.py  full_train.py  modeling.py  testing.py  train.py  train_contrastive.py  train_default.py  train_finetuning.py  train_full.py  trainers.py  utils.py  wandb_logger.py
sweeps/: sweep_config.yml
tests/: test_dataset_kshotcounter.py
