[tool.poetry]
name = "contrastner"
version = "0.1.0"
description = "Package for contrastner thesis"
authors = ["cezary17 <cezarykujath@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
altair = "^5.3.0"
wandb = {extras = ["importers"], version = "^0.17.6"}
transformers = "^4.43.3"
datasets = "^2.20.0"
plotly = "^5.23.0"
flair = "^0.14.0"
jupyter = "^1.0.0"
torch = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
